--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,15 @@
             android:background="#24BABABA"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/app_name"
+                android:textAllCaps="true"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -205,17 +214,17 @@
         </LinearLayout>
 
         <!--<android.support.design.widget.FloatingActionButton-->
-            <!--android:id="@+id/fab"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentEnd="true"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:layout_gravity="end|bottom"-->
-            <!--android:layout_margin="16dp"-->
-            <!--android:onClick="onUpdateStatus"-->
-            <!--android:src="@drawable/ic_write_black_24dp"-->
-            <!--app:pressedTranslationZ="8dp"-->
-            <!--app:rippleColor="#FFF" />-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_gravity="end|bottom"-->
+        <!--android:layout_margin="16dp"-->
+        <!--android:onClick="onUpdateStatus"-->
+        <!--android:src="@drawable/ic_write_black_24dp"-->
+        <!--app:pressedTranslationZ="8dp"-->
+        <!--app:rippleColor="#FFF" />-->
 
     </RelativeLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
